--- a/mysection.qmd
+++ b/mysection.qmd
@@ -92,7 +92,7 @@ import matplotlib.animation as animation
 def updatept():
 	#Used to put in the next points for plots
 
-#FuncAnimation(args,updatept(),frames)
+'''FuncAnimation(args,updatept(),frames)'''
 ```
 
 ## Conclusion
