--- a/mysection.qmd
+++ b/mysection.qmd
@@ -92,8 +92,9 @@ import matplotlib.animation as animation
 def updatept():
 	#Used to put in the next points for plots
 
-'''FuncAnimation(args,updatept(),frames)'''
 ```
+
+We can use the FuncAnimation(args,updatept(),frames) to update.
 
 ## Conclusion
 
