--- a/mysection.qmd
+++ b/mysection.qmd
@@ -89,7 +89,8 @@ Inputs required include the frames and other functions needed to update the plot
 
 import matplotlib.animation as animation
 
-def updatept():
+def updatept(self):
+	x = 5;
 
 ```
 
