--- a/intro.qmd
+++ b/intro.qmd
@@ -226,7 +226,7 @@ Please use the following table to sign up.
   03/20  | Noel, Luke             |
   03/20  | Whitney, William       |
   03/22  | Wang, Chaoyang         |
-  03/27  | Nguyen, Christine      |
+  03/27  | Nguyen, Christine      | Calling R from Python and vice versa
   03/27  | Cummins, Patrick       |
   03/29  | Zheng, Michael         |
   04/03  | Lunetta, Giovanni      |
