--- a/intro.qmd
+++ b/intro.qmd
@@ -216,7 +216,7 @@ Please use the following table to sign up.
   02/13  | Yi, Guanghong          | Grammer of graphics for python `plotnine`
   02/15  | Karandikar, Shivaram   | Text processing with NLTK
   02/20  | Chua, Yang Kang        |
-  02/20  | Jones, Courtney        |
+  02/20  | Jones, Courtney        | Descriptive Statistics
   02/22  | Sullivan, Colin        |
   02/27  | Shen, Tong             | Decision tree with `scikit-learn`
   02/27  | Alsubai, Nadia         | Web Scraping with Beautiful Soup
