--- a/exercises.qmd
+++ b/exercises.qmd
@@ -37,7 +37,9 @@
 1. Write a function to do a Monte Carlo approximation of $\pi$. The
    function takes a Monte Carlo sample size `n` as input, and returns
    a point estimate of $\pi$ and a 95% confidence interval. Apply your
-   function with sample size 1000, 2000, 4000, and 8000. Comment on
+   function with sample size 1000, 2000, 4000, and 8000. Repeat the experiment 
+   1000 times for each sample size and check the empirical probability that the
+   confidence intervals cover the true value of $\pi$. Comment on
    the results.
 
 1. Find the first 10-digit prime number occurring in consecutive
