--- a/intromatplotlib.qmd
+++ b/intromatplotlib.qmd
@@ -36,11 +36,11 @@ import matplotlib.pyplot as plt
 
 np.random.seed(8465);
 
-x = np.random.uniform(0,3,10);
-y = np.random.uniform(0,3,10);
-z = np.random.uniform(0,3,10);
+x = np.random.uniform(0, 3, 10);
+y = np.random.uniform(0, 3, 10);
+z = np.random.uniform(0, 3, 10);
 
-plt.scatter(x,y)
+plt.scatter(x, y)
 plt.xlabel('X')
 plt.ylabel('Y')
 plt.show()
@@ -52,10 +52,10 @@ If we want to keep a plot, we can save as a figure object. In addition, if we ne
 
 ```{python}
 
-fig,(ax,ax1) = plt.subplots(1,2,figsize = (8,6))
+fig,(ax, ax1) = plt.subplots(1, 2, figsize = (8, 6))
 
-ax.scatter(y,z,marker = '^')
-ax1.scatter(x,y,color = 'red')
+ax.scatter(y, z, marker = '^')
+ax1.scatter(x, y, color = 'red')
 
 plt.show()
 ```
@@ -68,15 +68,16 @@ fig = plt.figure()
 
 # Make 3D axes for ax1
 
-ax1 = fig.add_subplot(122,projection = '3d')
+ax1 = fig.add_subplot(122, projection = '3d')
 ax = fig.add_subplot(121)
 
 # Plot
 
-ax.plot(x,z,label = "Line Graph")
-ax1.scatter(x,y,z,c = z,cmap = 'cool',label = "Scatter in 3D")
+ax.plot(x, z, label = "Line Graph")
+ax1.scatter(x, y, z, c = z, cmap = 'cool', label = "Scatter in 3D")
 ax.legend()
 ax1.legend()
+
 plt.show()
 ```
 
