--- a/intromatplotlib.qmd
+++ b/intromatplotlib.qmd
@@ -52,10 +52,10 @@ If we want to keep a plot, we can save as a figure object. In addition, if we ne
 
 ```{python}
 
-fig,(ax, ax1) = plt.subplots(1, 2, figsize = (8, 6))
+figure,(fig, fig1) = plt.subplots(1, 2, figsize = (8, 6))
 
-ax.scatter(y, z, marker = '^')
-ax1.scatter(x, y, color = 'red')
+fig.scatter(y, z, marker = '^')
+fig1.scatter(x, y, color = 'red')
 
 plt.show()
 ```
@@ -64,19 +64,19 @@ We can also do 3d plots alongside 2d, but we need a different function in order 
 
 ```{python}
 
-fig = plt.figure()
+figure = plt.figure()
 
-# Make 3D axes for ax1
+# Make 3D axes for fig1
 
-ax1 = fig.add_subplot(122, projection = '3d')
-ax = fig.add_subplot(121)
+fig1 = fig.add_subplot(122, projection = '3d')
+fig = fig.add_subplot(121)
 
 # Plot
 
-ax.plot(x, z, label = "Line Graph")
-ax1.scatter(x, y, z, c = z, cmap = 'cool', label = "Scatter in 3D")
-ax.legend()
-ax1.legend()
+fig.plot(x, z, label = "Line Graph")
+fig1.scatter(x, y, z, c = z, cmap = 'cool', label = "Scatter in 3D")
+fig.legend()
+fig1.legend()
 
 plt.show()
 ```
