Added Colin Sullivan presentation topic

--- a/intro.qmd
+++ b/intro.qmd
@@ -221,7 +221,7 @@ Please use the following table to sign up.
   02/15  | Karandikar, Shivaram   | Text processing with NLTK
   02/20  | Chua, Yang Kang        |
   02/20  | Jones, Courtney        | Descriptive Statistics
-  02/22  | Sullivan, Colin        |
+  02/22  | Sullivan, Colin        | Statistical hypothesis tests scypy.stats
   02/27  | Shen, Tong             | Decision tree with `scikit-learn`
   02/27  | Alsubai, Nadia         | Web Scraping with Beautiful Soup
   03/01  | Bedard, Kaitlyn        |
