--- a/intro.qmd
+++ b/intro.qmd
@@ -219,7 +219,7 @@ Please use the following table to sign up.
   02/22  | Sullivan, Colin        | Statistical hypothesis tests scypy.stats
   02/27  | Shen, Tong             | Decision tree with `scikit-learn`
   02/27  | Alsubai, Nadia         | Web Scraping with Beautiful Soup
-  03/01  | Bedard, Kaitlyn        |
+  03/01  | Bedard, Kaitlyn        | Handling spatial data with `geopandas`
   03/06  | Nhan, Nathan           |
   03/08  | Parchekani, Kian       |
   03/20  | Noel, Luke             | Plotting on maps with `gmplot`
