--- a/mysection.qmd
+++ b/mysection.qmd
@@ -1,5 +1,5 @@
 # My Presentation Topic
-
+garrick
 
 ## Introduction
 
@@ -24,5 +24,5 @@ Put materials on topic 2 here.
 
 ## Conclusion
 
-Put sumaries here.
+Put summaries here.
 
